--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-fastapi==0.104.1
+fastapi==0.115.9
 uvicorn[standard]==0.24.0
 python-docx==1.1.0
 PyPDF2==3.0.1
@@ -11,7 +11,7 @@ openai>=1.6.1
 python-multipart==0.0.6
 jinja2==3.1.2
 aiofiles==23.2.1
-pydantic==2.5.2
+pydantic>=2.5.2
 python-dotenv==1.0.0
 pillow==10.1.0
 sqlalchemy==2.0.23
