--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ pdfplumber==0.10.3
 langchain>=0.1.0
 langchain-openai>=0.0.5
 langchain-community>=0.0.20
+langchain-classic>=0.0.1
 chromadb==0.4.22
 openai>=1.6.1
 python-multipart==0.0.6
