--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ langchain-openai>=0.0.5
 langchain-community>=0.0.20
 langchain-classic>=0.0.1
 chromadb==0.4.22
+numpy<2.0.0
 openai>=1.6.1
 python-multipart==0.0.6
 jinja2==3.1.2
